# connman-gdbus-example

./: .gitignore  AUTHORS  Makefile.am  configure.ac
src/: .gitignore  Makefile.am  connman-generated.c  connman-generated.h  connman-manager.c  connman-manager.h  connman-service.c  connman-service.h  connman-technology.c  connman-technology.h  main.c
xml/: README  connman.xml  generate.sh
